# Zerr

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README  README.md  WARP.md  build.sh  clear.sh  conanfile.txt  main.cpp  make  meson.build  test_feature_bank.cpp  test_trajectory_merge.cpp  zerr.c  zerr.cpp  zerr.h  zerr_config.h  zerr_tilde.c  zerr_tilde.h  zerr~.c  zerr~.cpp  zerr~.pd_darwin  zerr~_helper.pd
.githooks/: pre-commit
.github/workflows/: build-puredata-plugins-with-pd-lib-builder.yml  build-zerr-core-static-library.yml
_backup/: factorytemplate.cpp  test_trajectory_merge.cpp
_backup/clients/: jackclient.h
_backup/tests/speaker_array_setup/: meson.build  test_load_config.cpp
backup/: Makefile  feature_template.py  zerr.cpp
builddir/: zerr~.pd_darwin  zerr~_helper.pd
clients/: jackclient.cpp
clients/puredata/: Makefile
configs/jack_configs/: home_test.yaml
configs/modules/: preset1.yaml
configs/presets/: preset1.yaml
configs/speakerarray/: circulation_8.yaml  eruption_8.yaml  random_12.yaml
configs/speakers/: EN325_21.yaml  circulation_8.yaml
configs/spkr_configs/: EN325_21.yaml  circulation_8.yaml  eruption_8.yaml
configs/zerr_configs/: preset1.yaml
core/: CMakeLists.txt  conanfile.py  conanfile.txt
core/cmake/: zerr_core-config.cmake.in
core/include/features/: audio_features.h  centroid.h  crestfactor.h  flatness.h  flux.h  rolloff.h  rootmeansquare.h  zerocrossingrate.h  zerocrossings.h
core/include/modules/: audiodisperser.h  envelopecombinator.h  envelopegenerator.h  featurebank.h  featureextractor.h  featureprocessor.h  speakermanager.h
core/include/utils/: configs.h  frequencytransformer.h  linearinterpolator.h  logger.h  onsetdetector.h  ringbuffer.h  types.h  utils.h
core/src/features/: centroid.cpp  crestfactor.cpp  flatness.cpp  flux.cpp  rolloff.cpp  rootmeansquare.cpp  zerocrossingrate.cpp  zerocrossings.cpp
core/src/modules/: audiodisperser.cpp  envelopecombinator.cpp  envelopegenerator.cpp  featurebank.cpp  featureprocessor.cpp  speakermanager.cpp
core/src/utils/: frequencytransformer.cpp  linearinterpolator.cpp  logger.cpp  onsetdetector.cpp  ringbuffer.cpp  utils.cpp
core/usr/include/features/: audio_features.h  flatness.h  zerocrossings.h
core/usr/include/modules/: envelopecombinator.h  featurebank.h  speakermanager.h
core/usr/include/utils/: linearinterpolator.h  logger.h  onsetdetector.h  ringbuffer.h  types.h
features/: centroid.cpp  centroid.h  features.h  meson.build  readme.md
features/include/: centroid.h  flux.h  zerocrossing.h
features/src/: centroid.cpp  zerocrossing.cpp
include/: zerr.h
include/features/: amplitudeenvelope.h  audio_features.h  centroid.h  crest.h  features.h  flatness.h  flux.h  onset.h  rms_amplitude.h  rolloff.h  root_mean_square.h  rootmeansquare.h  zero_crossing_rate.h  zerocrossing.h  zerocrossingrate.h  zerocrossings.h
include/modules/: audiodisperser.h  audiorouter.h  envelopecombinator.h  envelopegenerator.h  featurebank.h  (+5 more)
jack/: main.cpp  meson.build  zerr.cpp  zerr.h
maxmsp/: CMakeLists.txt  LICENSE  License.md  ReadMe.md  conanfile.txt  package-info.json  package-info.json.in  package-lock.json
maxmsp/docs/: mc.zerr.disperser~.maxref.xml  mc.zerr.features~.maxref.xml  zerr.features~.maxref.xml  zerr.hello-world.maxref.xml
maxmsp/extras/: Zerr_Overview.maxpat
maxmsp/help/: mc.zerr.combinator~.maxhelp  mc.zerr.disperser~.maxhelp  mc.zerr.envelopes~.maxhelp  mc.zerr.features~.maxhelp  zerr.features~.maxhelp  zerr.hello-world.maxhelp
maxmsp/help/mc.min.info~.mxo/Contents/: Info.plist
maxmsp/help/mc.zerr.combinator~.mxo/Contents/: Info.plist
maxmsp/help/mc.zerr.combinator~.mxo/Contents/MacOS/: mc.zerr.combinator~
maxmsp/help/mc.zerr.disperser~.mxo/Contents/MacOS/: mc.zerr.disperser~
maxmsp/help/mc.zerr.features~.mxo/Contents/: Info.plist
maxmsp/help/mc.zerr.features~.mxo/Contents/MacOS/: mc.zerr.features~
maxmsp/help/zerr.combinator~/mc.zerr.combinator~.mxo/Contents/MacOS/: mc.zerr.combinator~
maxmsp/help/zerr.disperser~/mc.zerr.disperser~.mxo/Contents/: Info.plist
maxmsp/help/zerr.envelopes~/: mc.zerr.envelopes~.maxhelp
maxmsp/help/zerr.envelopes~/mc.zerr.envelopes~.mxo/Contents/MacOS/: mc.zerr.envelopes~
maxmsp/help/zerr.features~/: zerr.features~.maxhelp
maxmsp/help/zerr.features~/zerr.features~.mxo/Contents/: Info.plist
maxmsp/source/projects/mc.zerr.combinator_tilde/: CMakeLists.txt  mc.zerr.combinator_tilde.cpp  zerr_combinator.hpp
maxmsp/source/projects/mc.zerr.disperser_tilde/: CMakeLists.txt  mc.zerr.disperser_tilde.cpp
maxmsp/source/projects/mc.zerr.envelopes_tilde/: CMakeLists.txt  mc.zerr.envelopes_tilde.cpp  zerr_envelopes.hpp
maxmsp/source/projects/mc.zerr.features_tilde/: CMakeLists.txt  mc.zerr.features_tilde.cpp  zerr_features.hpp
maxmsp/source/projects/mc.zerr.features~/: mc.zerr.features_tilde.cpp  mc.zerr.features_tilde_bk.cpp  mc.zerr.features_tilde_bkk.cpp  mc_zerr_features.hpp  zerr_features.hpp
maxmsp/source/projects/zerr.features_tilde/: CMakeLists.txt  zerr.features_tilde.cpp  zerr_features.hpp
maxmsp/source/projects/zerr.hello-world/: zerr.hello-world_test.cpp
maxmsp/tests/: libmock_kernel.dylib  min.phasor_tilde_test  zerr.hello-world_test
modules/: FeatureBank.h  FeatureExtractor.cpp  FeatureExtractor.h  Zerr.h  audiorouter.h  featurebank.cpp  meson.build  speakearray.h  speaker.h  speakerarray.cpp  speakerarray.h  trajectorygenerator.h  types.h
puredata/: CMakeLists.txt  LICENSE  Makefile  README.md  circulation_8.yaml  conanfile.txt  meson.build  mingw-profile.txt  test.pd  zerr_envelopes~-help.pd
scripts/: hanning.py
src/: zerr.cpp
tests/init_feature/: meson.build  test_init_feature.cpp
tests/init_feature/features/: meson.build
tests/init_feature/features/include/: centroid.h  flux.h  onset.h
tests/init_feature/features/src/: centroid.cpp  flux.cpp  onset.cpp
tests/load_feature/: meson.build  test_feature_bank.cpp
tests/load_features/: meson.build
utilities/: meson.build
utils/: meson.build
(+192 files in other folders)
